--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -79,10 +79,9 @@
             <version>1.5.0</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.11</artifactId>
+            <version>3.0.1</version>
         </dependency>
     </dependencies>
 
