--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -83,6 +83,12 @@
             <artifactId>scalatest_2.11</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
