Refactored code and added argument parser

--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -93,6 +93,7 @@
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.11</artifactId>
             <version>3.0.1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
