--- a/integration/presto/pom.xml
+++ b/integration/presto/pom.xml
@@ -135,6 +135,18 @@
     </dependency>
 
     <dependency>
+      <groupId>com.facebook.presto</groupId>
+      <artifactId>presto-main</artifactId>
+      <version>0.166</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.openjdk.jol</groupId>
+          <artifactId>jol-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
       <groupId>com.facebook.presto.hadoop</groupId>
       <artifactId>hadoop-apache2</artifactId>
       <version>2.7.3-1</version>
