--- a/integration/hive/pom.xml
+++ b/integration/hive/pom.xml
@@ -104,7 +104,7 @@
             <artifactId>carbondata-hadoop</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
+      <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
@@ -164,6 +164,10 @@
                         <include>**/*Test.java</include>
                         <include>**/*TestCase.java</include>
                         <include>**/*Suite.java</include>
+                        <include>**/Test*.scala</include>
+                        <include>**/*Test.scala</include>
+                        <include>**/*TestCase.scala</include>
+                        <include>**/*Suite.scala</include>
                     </includes>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <argLine>-Xmx3g -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m</argLine>
