[CARBONDATA-1346] SDV cluster tests
New module spark-common-cluster-test has been added under integration module. Framework to run the tests in cluster is added here. And all the existing tests are migrated here.Following activities are done part of this PR.

This closes #1169

--- a/integration/spark2/pom.xml
+++ b/integration/spark2/pom.xml
@@ -143,6 +143,7 @@
         <version>1.0</version>
         <!-- Note config is repeated in surefire config -->
         <configuration>
+          <skipTests>false</skipTests>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>CarbonTestSuite.txt</filereports>
@@ -166,5 +167,13 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>sdvtest</id>
+      <properties>
+        <maven.test.skip>true</maven.test.skip>
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
