--- a/examples/flink/pom.xml
+++ b/examples/flink/pom.xml
@@ -30,6 +30,7 @@
   <name>Apache CarbonData :: Flink Examples</name>
 
   <properties>
+    <flink.version>1.1.4</flink.version>
     <dev.path>${basedir}/../../dev</dev.path>
   </properties>
 
