--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
     <module>assembly</module>
     <module>examples/flink</module>
     <module>integration/hive</module>
+    <module>integration/presto</module>
 
   </modules>
 
@@ -308,7 +309,6 @@
         <scala.binary.version>2.10</scala.binary.version>
         <scala.version>2.10.4</scala.version>
         <maven.test.skip>true</maven.test.skip>
-        <flink.version>1.1.4</flink.version>
       </properties>
       <modules>
         <module>format</module>
