--- a/integration/hive/pom.xml
+++ b/integration/hive/pom.xml
@@ -75,6 +75,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.carbondata</groupId>
             <artifactId>carbondata-spark2</artifactId>
             <version>${project.version}</version>
