--- a/integration/hive/pom.xml
+++ b/integration/hive/pom.xml
@@ -75,6 +75,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.carbondata</groupId>
             <artifactId>carbondata-spark2</artifactId>
             <version>${project.version}</version>
@@ -160,7 +164,7 @@
                     <includes>
                         <include>**/*.java</include>
                         <include>**/*.scala</include>
-                       <include>**/Test*.java</include>
+                        <include>**/Test*.java</include>
                         <include>**/*Test.java</include>
                         <include>**/*TestCase.java</include>
                         <include>**/*Suite.java</include>
