--- a/core/pom.xml
+++ b/core/pom.xml
@@ -90,6 +90,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+		<groupId>org.apache.thrift</groupId>
+		<artifactId>libthrift</artifactId>
+        <version>0.9.0</version>
+		<scope>compile</scope>
+	</dependency>
   </dependencies>
 
   <build>
