--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
     <module>hadoop</module>
     <module>integration/spark-common</module>
     <module>integration/spark-common-test</module>
+    <module>integration/spark-common-cluster-test</module>
     <module>assembly</module>
     <module>examples/flink</module>
 
