Added profile for sdv tests and passing carbon properties from driver to cluster

--- a/integration/spark-common-test/pom.xml
+++ b/integration/spark-common-test/pom.xml
@@ -137,7 +137,7 @@
         <version>1.0</version>
         <!-- Note config is repeated in surefire config -->
         <configuration>
-          <skipTests>true</skipTests>
+          <skipTests>false</skipTests>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>CarbonTestSuite.txt</filereports>
@@ -148,8 +148,6 @@
           </environmentVariables>
           <systemProperties>
             <java.awt.headless>true</java.awt.headless>
-            <spark.master.url>${spark.master.url}</spark.master.url>
-            <hdfs.url>${hdfs.url}</hdfs.url>
           </systemProperties>
         </configuration>
         <executions>
@@ -229,6 +227,12 @@
           </exclusions>
         </dependency>
       </dependencies>
+    </profile>
+    <profile>
+      <id>sdvtest</id>
+      <properties>
+        <maven.test.skip>true</maven.test.skip>
+      </properties>
     </profile>
   </profiles>
 </project>
