--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,6 @@
     <module>hadoop</module>
     <module>integration/spark-common</module>
     <module>integration/spark-common-test</module>
-    <module>integration/spark-common-cluster-test</module>
     <module>assembly</module>
     <module>examples/flink</module>
 
@@ -443,6 +442,12 @@
     </profile>
     <profile>
       <id>include-all</id>
+    </profile>
+    <profile>
+      <id>sdvtest</id>
+      <modules>
+        <module>integration/spark-common-cluster-test</module>
+      </modules>
     </profile>
     <profile>
       <id>rat</id>
