--- a/integration/spark2/pom.xml
+++ b/integration/spark2/pom.xml
@@ -143,7 +143,7 @@
         <version>1.0</version>
         <!-- Note config is repeated in surefire config -->
         <configuration>
-          <skipTests>false</skipTests>
+          <skipTests>true</skipTests>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
           <filereports>CarbonTestSuite.txt</filereports>
