--- a/integration/spark-common/pom.xml
+++ b/integration/spark-common/pom.xml
@@ -78,6 +78,7 @@
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.binary.version}</artifactId>
       <version>2.2.1</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
