[CARBONDATA-1367] Change dependency to spark2

--- a/examples/flink/pom.xml
+++ b/examples/flink/pom.xml
@@ -52,12 +52,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.carbondata</groupId>
-      <artifactId>carbondata-spark</artifactId>
+      <artifactId>carbondata-spark2</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.carbondata</groupId>
-      <artifactId>carbondata-examples-spark</artifactId>
+      <artifactId>carbondata-examples-spark2</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
