--- a/integration/hive/pom.xml
+++ b/integration/hive/pom.xml
@@ -123,6 +123,14 @@
               </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
